# ogg-bitstream

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  read_error.rs  reader.rs  write_error.rs  writer.rs
src/bitstream/: crc32.rs  mod.rs  read_error.rs  reader.rs  write_error.rs  writer.rs
src/media_mapping/: mod.rs  read_error.rs  write_error.rs
tests/: bitreader.rs  lib.rs
