[package]
name = "ogg-bitstream"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "Reads and writes OGG bitstreams."
license = "Zlib OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasenbanck/ogg-bitstream"
documentation = "https://docs.rs/ogg-bitstream"
categories = ["multimedia"]
keywords = ["ogg", "bitstream"]
edition = "2018"

[features]
default = ["reader", "writer"]
reader = []
writer = []

[dependencies]
